--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-<!DOCTYPE html>
-<h1>hi</h1>
+
+
+	<script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
+	</script>
+	<script> 
+	$(function(){
+  	$("#header").load("header.html"); 
+  	$("#footer").load("footer.html"); 
+	});
+	</script> 	
+
+	<h1>hi</h1>
+
+
