--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   	$("#header").load("header.html"); 
   	$("#footer").load("footer.html"); 
 	});
-	</script> 	
+	</script>
+	 	
+	</head>
+	<body>
 
 	<div id="header"></div>
 	<!--Remaining section-->
