trying to put header and footer in the right order

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   	$("#footer").load("footer.html"); 
 	});
 	</script>
-	 	
+
 	</head>
 	<body>
 
 	<div id="header"></div>
 	<!--Remaining section-->
+	<h1>Hola</h1>
+
 	<div id="footer"></div>
 
-	<h1>hello</h1>
 
 
