--- a/header.html
+++ b/header.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-	 <link rel="stylesheet" type="text/css" href="style.css">
+	 <link rel="stylesheet" type="text/css" href="/style.css">
 	<h1>TheWebsite</h1>
 	<div class="wrapper">
-		<a href="#" class="button">Shiny!!</a>
+		<a href="#" class="button">Shiny!!!</a>
 	</div>
