--- a/header.html
+++ b/header.html
@@ -4,6 +4,4 @@
 <head>
 	 <link rel="stylesheet" type="text/css" href="/style.css">
 	<h1>TheWebsite</h1>
-	<div class="wrapper">
-		<a href="#" class="button">Shiny!!!</a>
-	</div>
+	<button>Hover me !</button>
