--- a/header.html
+++ b/header.html
@@ -2,6 +2,6 @@
 
 <html>
 <head>
-	 <link rel="stylesheet" type="text/css" href="/style.css">
+	 <link rel="stylesheet" type="text/css" href="joehenriquez.github.io/style.css">
 	<h1>TheWebsite!</h1>
 	<button>Hover!</button>
