--- a/header.html
+++ b/header.html
@@ -3,5 +3,5 @@
 <html>
 <head>
 	 <link rel="stylesheet" type="text/css" href="joehenriquez.github.io/style.css">
-	<h1>TheWebsite!!</h1>
+	<h1>TheWebsite!</h1>
 	<button>Hover!</button>
