--- a/header.html
+++ b/header.html
@@ -4,6 +4,6 @@
 <head>
 	 <link rel="stylesheet" type="text/css" href="joehenriquez.github.io/style.css">
 	<h1 class= buttons>TheWebsite!!</h1>
-	<button>Hover!!</button>
+	<button>Hover!</button>
 	
 	
