trying to make it faster and in one file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
 
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="joehenriquez.github.io/style.css">
+	<h1 class= buttons>TheWebsite!!</h1>
+	<button>Hover!</button>
+		
+
+	/*
+	to load header and footer in different files
 
 	<script
     src="https://code.jquery.com/jquery-3.3.1.js"
@@ -11,18 +21,18 @@
   	$("#footer").load("footer.html"); 
 	});
 	</script>
-
-	</head>
-	<body>
-
+	*/
+</head>
+<body>
+	/*
+	javascript for header and footer
 	<div id="header"></div>
 	<!--Remaining section-->
 	<h1>TheContents</h1>
-
-
-
-
 	<div id="footer"></div>
+	*/
+	<h1>body</h1>
+	<h2>footer</h2>
 
-
-
+</body>
+</html>
