--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="joehenriquez.github.io/style.css">
-	<h1 class= buttons>TheWebsite!!!</h1>
+	<h1 class= buttons>TheWebsite!!</h1>
 	<button>Hover!</button>
 		
 
