making the header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="joehenriquez.github.io/style.css">
-	<h1 class= buttons>TheWebsite!</h1>
-	<button>Hover!</button>
-		
 
 	<!--
 	to load header and footer in different files
@@ -31,6 +28,10 @@
 	<h1>TheContents</h1>
 	<div id="footer"></div>
 	-->
+	<header>
+		<h1 class= buttons>TheWebsite!</h1>
+		<button>Hover!</button>
+	</header>	
 	<h1>body</h1>
 	<h2>footer</h2>
 
