--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div id="footer"></div>
 	-->
 	<header>
-		<h1 class= buttons>TheWebsite!</h1>
+		<h1 class= "titl">TheWebsite!</h1>
 		<button>Hover!</button>
 	</header>	
 	<h1>body</h1>
