--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 	<header>
 		<h1 class= "titl">TheWebsite!</h1>
 		<button>Hover!</button>
-	</header>	
-	<h1>body</h1>
-	<h2>footer</h2>
-
+	</header>
+	<div class="cont">
+		<h1>body</h1>
+		<h2>footer</h2>
+	</div>
 </body>
 </html>
