--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+	<title>WebTheme1</title>
 	<link rel="stylesheet" type="text/css" href="joehenriquez.github.io/style.css">
 
 	<!--
