--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</header>
 	<div class="cont">
 		<h1>body</h1>
-		<h2>footer</h2>
+		<p>loremipsumloremipsumloremipsumloremipsumloremipsumloremipsumvvloremipsumvloremipsumloremipsumloremipsumloremipsumloremipsum</p>
 	</div>
 </body>
 </html>
