--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	-->
 	<header>
 		<h1 class= "titl">TheWebsite!</h1>
-		<button>Hover!</button>
+		<button class="hbtn">Hover!</button>
 	</header>
 	<div class="cont">
 		<h1>body</h1>
