--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<button class="hbtn">Hover!</button>
 	</header>
 	<div class="cont">
-		<h1>body</h1>
+		<h1 class="bodh">body</h1>
 		<p>loremipsumloremipsumloremipsumloremipsumloremipsumloremipsumvvloremipsumvloremipsumloremipsumloremipsumloremipsumloremipsum</p>
 	</div>
 </body>
