--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</header>
 	<div class="cont">
 		<h1 class="bodh">body</h1>
-		<p>loremipsumloremipsumloremipsumloremipsumloremipsumloremipsumvvloremipsumvloremipsumloremipsumloremipsumloremipsumloremipsum</p>
+		<p class="bodh">loremipsumloremipsumloremipsumloremipsumloremipsumloremipsumvvloremipsumvloremipsumloremipsumloremipsumloremipsumloremipsum</p>
 	</div>
 </body>
 </html>
