adding a div to the header

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 	<div id="footer"></div>
 	-->
 	<header>
+	<div class="hdr">
 		<h1 class= "titl">TheWebsite!</h1>
 		<button class="hbtn">Hover!</button>
+	</div>
 	</header>
 	<div class="cont">
 		<h1 class="bodh">body</h1>
